--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,6 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 pydantic==2.10.3
 pydantic-settings==2.6.1
-firebase-admin==6.5.0
 python-dotenv==1.0.1
 email-validator==2.2.0
+redis==5.0.8
