--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.6
 uvicorn[standard]==0.34.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 pydantic==2.10.3
 pydantic-settings==2.6.1
 python-dotenv==1.0.1
